--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,7 +1,5 @@
-FROM --platform=$TARGETPLATFORM alpine:3.17
+FROM alpine:3.17
 
-ARG TARGETPLATFORM
-ARG BUILDPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=14.2.rel1
 
@@ -30,12 +28,6 @@ RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
 	&& rm ${TOOLS_PATH}/*.txt \
 	&& rm -rf ${TOOLS_PATH}/share/doc \
 	&& echo "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz"
-
-# Get static analysis tools: clang-format clang-tidy, Lizard, cpplint
-RUN apk --no-cache add \
-	clang-extra-tools \
-	python3 py3-pip \
-	&& pip install lizard
 
 # Add Toolchain to PATH
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
