--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - "*"
+      - "!doc"
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - main
+      - "!doc"
     paths-ignore:
       - '**.md'
   workflow_dispatch:
