--- a/Dockerfile.arch
+++ b/Dockerfile.arch
@@ -1,4 +1,4 @@
-FROM archlinux:base-devel
+FROM --platform=$TARGETPLATFORM archlinux:base-devel
 
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=14.2.rel1
