fix: update actions/checkout version to v4 in workflow and add ARGs in Dockerfiles

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,5 +1,7 @@
 FROM --platform=$TARGETPLATFORM ubuntu:22.04
 
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=14.2.rel1
 
