--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,5 +1,7 @@
 FROM --platform=$TARGETPLATFORM debian:bookworm-slim
 
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=14.2.rel1
 
